styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

/* Google font */
/* @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600&display=swap"); */

@font-face {
    font-family: 'Avenir';
    src: local('Avenir Roman'), local('Avenir-Roman'),
        url('/fonts/Avenir-Roman.woff2') format('woff2'),
        url('/fonts/Avenir-Roman.woff') format('woff'),
        url('/fonts/Avenir-Roman.ttf') format('truetype');
    font-weight: 400;
    font-style: normal;
  }

html,
body {
  padding: 0;
  margin: 0;
  font-family: 'Avenir', sans-serif;
  @apply h-screen overflow-x-hidden flex items-center justify-center
}

a {
  color: inherit;
  text-decoration: none;
}

* {
  box-sizing: border-box;
}

